# PracticeDeepLearning

./: .editorconfig  .gitignore  PracticeDeepLearning.pyproj  PracticeDeepLearning.sln  PracticePython.pyproj  PracticePython.sln  README.md  funcs.py  main.py  matrix_practice.py  practice_ANN.py  practice_ANN_nmist.py  practice_matrix.py  practice_mnist.py  practice_neuralnet.py  practice_neuralnet_mnist.py  pyproject.toml
